fixed spacings

--- a/src/containers/PaymentPage/paymentpage.module.scss
+++ b/src/containers/PaymentPage/paymentpage.module.scss
@@ -1,108 +1,107 @@
 @keyframes animateBackgorund {
-    0% {
-        background-color:white;
-    }
+  0% {
+    background-color: white;
+  }
 
-    40% {
-        background-color: #4e9068
-    }
+  40% {
+    background-color: #4e9068;
+  }
 
-    100% {
-        background-color: #76ce52
-    }
+  100% {
+    background-color: #76ce52;
+  }
 }
 
-@keyframes slideIn{
-    0% {
-        opacity:0;
-        transform: translateY(-10rem);
-    }
-    100% {
-        opacity:1;
-        transform: translateY(0);
-    }
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-10rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
-@keyframes slideInDelayed{
-    0% {
-        opacity:0;
-        transform: scale(0);
-    }
-   20% {
-        opacity:0;
-        transform: scale(0);
-    }
-    100% {
-        opacity:1;
-        transform: scale(1);
-    }
+@keyframes slideInDelayed {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  20% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
-@keyframes popInDelayed{
-    0% {
-        opacity:0;
-        transform: scale(0);
-    }
-    60%{
-        opacity:0;
-        transform: scale(0);
-    }
-    100% {
-        opacity:1;
-        transform: scale(1);
-    }
+@keyframes popInDelayed {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  60% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 @keyframes swipe {
-    0% {
-        transform: translateX(0)
-    }
-    100% {
-        transform: translateX(100%);
-    }
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100%);
+  }
 }
 
 .paymentPage {
-    height:100%;
-    animation-name: animateBackgorund;
+  height: 100%;
+  animation-name: animateBackgorund;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  > img {
+    animation-name: popInDelayed;
+    width: 200px;
+    margin: 10rem 0;
+    max-width: 60%;
+  }
+  > * {
     animation-duration: 2s;
     animation-fill-mode: forwards;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    > img {    
-        animation-name: popInDelayed;
-        width: 200px;
-        margin: 10rem 0;
-        max-width: 60%;
-    }
-    > * {
-        animation-duration: 2s;
-        animation-fill-mode: forwards;
-    }
-    > div {
-        animation-name: slideInDelayed;
-    }
-    > p {
-        animation-name: slideIn;
-        max-width: 80%;
-        text-align: center;
-        font-size:10rem;
-        color: white;
-        text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.6);
+  }
+  > div {
+    animation-name: slideInDelayed;
+  }
+  > p {
+    animation-name: slideIn;
+    max-width: 80%;
+    text-align: center;
+    font-size: 10rem;
+    color: white;
+    text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.6);
 
-
-        span {
-            font-weight: bold;
-            color: #ffff00;
-            white-space: nowrap;
-        }
+    span {
+      font-weight: bold;
+      color: #ffff00;
+      white-space: nowrap;
     }
+  }
 
-    &.exiting {
-        background-color: #76ce52;
-        animation-name: swipe;
-        animation-duration: 2s;
-        animation-fill-mode: forwards;
-    }
+  &.exiting {
+    background-color: #76ce52;
+    animation-name: swipe;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+  }
 }
